fixed horizontal scroll and fonts

--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -7,6 +7,7 @@
     min-height: 200px;
     background: #2A2C2F;
     opacity: 0.3;
+    box-sizing: border-box;
 }    
 
 @media screen and (min-width: 768px){
