--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,6 @@
 .cover {
     padding-bottom: 64px;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px){
