--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,6 +6,8 @@
     flex-direction: column;
     align-items: flex-start;
     min-width: 320px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
