--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,6 +8,7 @@
     grid-template-columns: minmax(320px, auto);
     margin-bottom: 50px;
     gap: 32px;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
