--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-self: center;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px){
